--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <div class="u-container-layout u-container-layout-2">
                   <h3 class="u-align-center u-text u-text-default u-text-1">Follow Us</h3>
                   <quillbot-extension-highlights style="display: initial; visibility: initial; opacity: initial; clip-path: initial; position: absolute; float: left; top: 0px; left: 0px; z-index: 1 !important; pointer-events: none;"></quillbot-extension-highlights>
-                  <p class="u-align-center u-text u-text-2">Stay connected with me! Follow my social media accounts for the latest updates on trading tips, exclusive music releases, and behind-the-scenes content. Don’t miss out on new opportunities to learn, grow, and be inspired. Join our community today and let’s make great things happen together! </p>
+                  <p class="u-align-center u-text u-text-2">Stay connected with me! Follow my social media accounts for the latest updates on trading tips, and behind-the-scenes content. Don’t miss out on new opportunities to learn, grow, and be inspired. Join our community today and let’s make great things happen together! </p>
                 </div>
               </div>
             </div>
